added to getwinesbytag method